[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.3"
log = "0.4"
pretty_env_logger = "0.4"

[[bin]]
name = "courtneyrohan-migrate-blogger-images"
path = "src/bin/courtneyrohan/blogger-sanity-image/main.rs"

[[bin]]
name = "test"
path = "src/bin/courtneyrohan/test/main.rs"
